2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 619799 - Renaming variable also invokes
	  auto-complete'.

2010-07-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Completion/DropDownBoxListWindow.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Worked on quick navigation bar

2010-07-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Improved handling of inner classes.

2010-07-02  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Completion/DropDownBoxListWindow.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  C# editor extension now uses the IPathedDocument subsystem.

2010-07-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 618676 - C# code editor removes "override" word
	  after choosing one of intellisense variants'.

2010-06-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs: Added support for
	  fixed fields & constants.

2010-06-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs: Fields are now
	  working.

2010-06-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Submitted patch from Tom Spink <tspink@gmail.com>: Update to
	  generic code completion

2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs: fixed
	  bug in abstract member overriding.

2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/TextEditorResolverProvider.cs:
	  Added bounds check.

2010-06-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Only update changed lines.
