@@ -1,5 +1,10 @@
 2010-07-05  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
+	  615992 - Intellisense broken when calling generic method.'.
+
+2010-07-05  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
 	  Fixed 'Bug 619799 - Renaming variable also invokes
 	  auto-complete'.
